// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector renders buttons with expected text and classNames 1`] = `
<Popover
  arrowPointAtCenter={true}
  content={
    Array [
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        -
      </button>,
      Array [
        <button
          className="Selector--btn full popover-content"
          onClick={[Function]}
          type="button"
        >
          0
        </button>,
        <button
          className="Selector--btn partial popover-content"
          onClick={[Function]}
          type="button"
        >
          1
        </button>,
        <button
          className="Selector--btn full popover-content"
          onClick={[Function]}
          type="button"
        >
          2
        </button>,
        <button
          className="Selector--btn empty popover-content"
          onClick={[Function]}
          type="button"
        >
          3
        </button>,
        <button
          className="Selector--btn empty popover-content"
          onClick={[Function]}
          type="button"
        >
          4
        </button>,
      ],
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        +
      </button>,
    ]
  }
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottom"
  prefixCls="ant-popover"
  title="Visible downstream hops"
  transitionName="zoom-big"
  trigger="hover"
>
  <span
    className="Selector"
  >
    Downstream hops
     
    <button
      className="Selector--btn full furthest"
      key="2 1 furthest"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
     / 
    <button
      className="Selector--btn empty delimiter"
      key="4 1 delimiter"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
  </span>
</Popover>
`;

exports[`Selector renders message when there are no options 1`] = `
<span
  className="Selector"
>
  No 
  upstream hops
</span>
`;

exports[`Selector renders upstream hops with negative distance correctly 1`] = `
<Popover
  arrowPointAtCenter={true}
  content={
    Array [
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        -
      </button>,
      Array [
        <button
          className="Selector--btn full popover-content"
          onClick={[Function]}
          type="button"
        >
          0
        </button>,
        <button
          className="Selector--btn partial popover-content"
          onClick={[Function]}
          type="button"
        >
          1
        </button>,
        <button
          className="Selector--btn full popover-content"
          onClick={[Function]}
          type="button"
        >
          2
        </button>,
        <button
          className="Selector--btn empty popover-content"
          onClick={[Function]}
          type="button"
        >
          3
        </button>,
        <button
          className="Selector--btn empty popover-content"
          onClick={[Function]}
          type="button"
        >
          4
        </button>,
      ],
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        +
      </button>,
    ]
  }
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottom"
  prefixCls="ant-popover"
  title="Visible upstream hops"
  transitionName="zoom-big"
  trigger="hover"
>
  <span
    className="Selector"
  >
    Upstream hops
     
    <button
      className="Selector--btn full furthest"
      key="-2 -1 furthest"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
     / 
    <button
      className="Selector--btn empty delimiter"
      key="-4 -1 delimiter"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
  </span>
</Popover>
`;
